--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: "docker://dimasalakhov/gosec"
+  image: "docker://portainer/gosec"
   args:
     - ${{ inputs.args }}
 
